fixed id's overlap bugs

--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,7 @@ button:hover {
 
 .cells {
   border: 2px solid white;
+  position: relative;
   width: 100px;
   height: 100px;
   background-color: rgba(255, 255, 255, 0.08);
